--- a/main.html
+++ b/main.html
@@ -9,6 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<h1>Login Form</h1>
+<h1>Login Form</h1>
 <form id="loginForm">
     <label for="username">Username:</label>
     <input type="text" id="username" name="username" placeholder="Username" required><br><br>
@@ -17,7 +18,7 @@
     <input type="checkbox" id="checkbox" name="remember"><label for="checkbox">Remember me</label><br><br>
     <input type="submit" id="submit" value="Submit">
 </form>
-<button id="existing" style="display: none;">Login as existing user</button>
+<button id="existing" style="display: none;">Login as existing user</button> <!-- changed display property to none -->
     <script type="text/javascript" src="./script.js">
 </script>
 
