--- a/main.html
+++ b/main.html
@@ -15,7 +15,8 @@
     <input type="text" id="username" name="username" placeholder="Username" required><br><br>
     <label for="password">Password:</label>
     <input type="password" id="password" name="password" placeholder="Password" required><br><br>
-    <input type="checkbox" id="checkbox" name="remember"><label for="checkbox">Remember me</label><br><br>
+    <input type="checkbox" id="checkbox" name="remember">
+	<label for="checkbox">Remember me:</label><br><br>
     <input type="submit" id="submit" value="Submit">
 </form>
 <button id="existing" style="display: none;">Login as existing user</button> <!-- changed display property to none -->
